--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@heroicons/vue": "^2.1.1",
         "@vueuse/core": "^10.9.0"
     }
 }
