--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.1.1",
-        "@vueuse/core": "^10.9.0"
+        "@vueuse/core": "^10.9.0",
+        "vuex": "^4.1.0"
     }
 }
